// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartGroup:  should handle breadcrumb 1`] = `
Object {
  "active": Object {
    "children": Array [
      Object {
        "name": "child",
      },
    ],
    "count": 3,
    "name": "cats",
  },
  "hoveredItem": null,
}
`;

exports[`ChartGroup:  should handle breadcrumb 2`] = `
Object {
  "active": null,
  "hoveredItem": null,
}
`;

exports[`ChartGroup:  should handle mouse out 1`] = `
Object {
  "active": null,
  "hoveredItem": Object {
    "count": 2,
    "dataSet": undefined,
    "index": -1,
    "name": "cats",
  },
}
`;

exports[`ChartGroup:  should handle mouse out 2`] = `
Object {
  "active": null,
  "hoveredItem": null,
}
`;

exports[`ChartGroup:  should render 1`] = `
<Panel
  sectioned={true}
  title="Bounce Rates"
>
  <Grid>
    <Grid.Column
      lg={5}
      xs={12}
    >
      <div>
        <BounceChart
          handleClick={[Function]}
          handleMouseOut={[Function]}
          handleMouseOver={[Function]}
          hoveredItem={null}
          primaryData={
            Array [
              Object {
                "children": Array [
                  Object {
                    "name": "child",
                  },
                ],
                "count": 1,
                "fill": "hsl(355.1, 70.5%, 52.2%)",
                "name": "cats",
              },
            ]
          }
          secondaryData={
            Array [
              Object {
                "children": Array [
                  Object {
                    "name": "child",
                  },
                ],
                "count": 2,
                "fill": "hsl(198.20000000000005, 70.2%, 53.9%)",
                "name": "types",
              },
            ]
          }
        />
        <ActiveLabel
          name="Bounce Rate"
          value="50.00%"
        />
      </div>
    </Grid.Column>
    <Grid.Column
      lg={7}
      xs={12}
    >
      <Legend
        handleClick={[Function]}
        handleMouseOut={[Function]}
        handleMouseOver={[Function]}
        headerData={
          Array [
            Object {
              "count": 100,
              "name": "Targeted",
            },
            Object {
              "count": 50,
              "name": "All Bounces",
            },
          ]
        }
        hoveredItem={null}
        primaryData={
          Array [
            Object {
              "children": Array [
                Object {
                  "name": "child",
                },
              ],
              "count": 1,
              "fill": "hsl(355.1, 70.5%, 52.2%)",
              "name": "cats",
            },
          ]
        }
        secondaryData={
          Array [
            Object {
              "children": Array [
                Object {
                  "name": "child",
                },
              ],
              "count": 2,
              "fill": "hsl(198.20000000000005, 70.2%, 53.9%)",
              "name": "types",
            },
          ]
        }
      />
    </Grid.Column>
  </Grid>
</Panel>
`;

exports[`ChartGroup:  should render correctly after click 1`] = `
<Legend
  handleClick={[Function]}
  handleMouseOut={[Function]}
  handleMouseOver={[Function]}
  headerData={
    Array [
      Object {
        "breadcrumb": true,
        "name": "All Bounces",
        "onClick": [Function],
      },
      Object {
        "count": 3,
        "name": "cats",
      },
    ]
  }
  hoveredItem={null}
  primaryData={
    Array [
      Object {
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "child",
      },
    ]
  }
  secondaryData={null}
/>
`;

exports[`ChartGroup:  should render correctly after click 2`] = `
<BounceChart
  handleClick={[Function]}
  handleMouseOut={[Function]}
  handleMouseOver={[Function]}
  hoveredItem={null}
  primaryData={
    Array [
      Object {
        "fill": "hsl(355.1, 70.5%, 52.2%)",
        "name": "child",
      },
    ]
  }
  secondaryData={null}
/>
`;

exports[`ChartGroup:  should render label when hovering 1`] = `
<ActiveLabel
  name="cats"
  value="4.00%"
/>
`;

exports[`ChartGroup:  should render loading 1`] = `
<Panel
  sectioned={true}
  title="Bounce Rates"
>
  <Component />
</Panel>
`;
